# poke-home

./: .ghci  .gitignore  ChangeLog.md  README.md  cabal.project  dialog-flow.nix  dialogflow-fulfillment.nix  dialogflow.nix  package.yaml  poke-home.cabal  poke-home.nix  pokeapi.nix  release.nix  request  response  result  shell.nix  simple_response  stack.yaml
app/: Main.hs
src/: Lib.hs  LocationIntent.hs  TypeIntent.hs  Types.hs
src/DialogFlow/Message/: Types.hs
