cabal-version:  2.4
name:           poke-home
version:        0.1.0.0
description:    A virtual assistance that pokes homes with Pakeeman stuff
homepage:       https://github.com/mauriciofierrom/poke-home#readme
bug-reports:    https://github.com/mauriciofierrom/poke-home/issues
author:         Mauricio Fierro
maintainer:     mauriciofierrom@gmail.com
copyright:      2019 Mauricio Fierro
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md

library
  exposed-modules:
      Lib
      Types
  other-modules:
      Paths_poke_home
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base ^>=4.12.0.0
    , bytestring
    , containers
    , dialogflow-fulfillment
    , http-client
    , http-client-tls
    , mtl
    , pokeapi
    , servant
    , servant-server
    , servant-client
    , text
    , transformers
    , unordered-containers
    , wai
    , warp
  default-language: Haskell2010

executable poke-home-exe
  main-is: Main.hs
  other-modules:
      Paths_poke_home
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base ^>=4.12.0.0
    , bytestring
    , containers
    , http-client
    , http-client-tls
    , mtl
    , poke-home
    , pokeapi
    , servant
    , servant-server
    , text
    , transformers
    , unordered-containers
    , wai
    , warp
  default-language: Haskell2010

test-suite poke-home-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_poke_home
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , dialogflow-fulfillment
    , http-client
    , http-client-tls
    , mtl
    , poke-home
    , pokeapi
    , servant
    , servant-server
    , text
    , transformers
    , unordered-containers
    , wai
    , warp
  default-language: Haskell2010
